Fixed scrollbar

--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html {
+    width: 100vw;
+    overflow-x: hidden; 
+    scrollbar-width: thin;
+    scrollbar-color: #303742 #030418 !important;
+}
